// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon component when a default icon is explicitly provided should render correctly 1`] = `
<i
  aria-hidden={true}
  className="material-icons MuiIcon-root natds-icons natds-icons-filled-default-mockup NatDSIcon-root-1 NatDSIcon-root-3"
/>
`;

exports[`Icon component when a default icon is implicitly defined should render correctly 1`] = `
<i
  aria-hidden={true}
  className="material-icons MuiIcon-root natds-icons natds-icons-filled-default-mockup NatDSIcon-root-1 NatDSIcon-root-2"
/>
`;

exports[`Icon component when a valid icon name is provided should render correctly 1`] = `
<i
  aria-hidden={true}
  className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-add NatDSIcon-root-1 NatDSIcon-root-4"
/>
`;

exports[`Icon component when an empty theme is provided should render correctly 1`] = `
<i
  aria-hidden={true}
  className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-add NatDSIcon-root-1 NatDSIcon-root-2"
/>
`;

exports[`Icon component when icon size is "huge" should render correctly 1`] = `
<i
  aria-hidden={true}
  className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-add NatDSIcon-root-1 NatDSIcon-root-15"
/>
`;

exports[`Icon component when icon size is "hugeX" should render correctly 1`] = `
<i
  aria-hidden={true}
  className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-add NatDSIcon-root-1 NatDSIcon-root-17"
/>
`;

exports[`Icon component when icon size is "hugeXX" should render correctly 1`] = `
<i
  aria-hidden={true}
  className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-add NatDSIcon-root-1 NatDSIcon-root-19"
/>
`;

exports[`Icon component when icon size is "hugex" should render correctly 1`] = `
<i
  aria-hidden={true}
  className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-add NatDSIcon-root-1 NatDSIcon-root-16"
/>
`;

exports[`Icon component when icon size is "hugexx" should render correctly 1`] = `
<i
  aria-hidden={true}
  className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-add NatDSIcon-root-1 NatDSIcon-root-18"
/>
`;

exports[`Icon component when icon size is "large" should render correctly 1`] = `
<i
  aria-hidden={true}
  className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-add NatDSIcon-root-1 NatDSIcon-root-10"
/>
`;

exports[`Icon component when icon size is "largeX" should render correctly 1`] = `
<i
  aria-hidden={true}
  className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-add NatDSIcon-root-1 NatDSIcon-root-12"
/>
`;

exports[`Icon component when icon size is "largeXX" should render correctly 1`] = `
<i
  aria-hidden={true}
  className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-add NatDSIcon-root-1 NatDSIcon-root-14"
/>
`;

exports[`Icon component when icon size is "largex" should render correctly 1`] = `
<i
  aria-hidden={true}
  className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-add NatDSIcon-root-1 NatDSIcon-root-11"
/>
`;

exports[`Icon component when icon size is "largexx" should render correctly 1`] = `
<i
  aria-hidden={true}
  className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-add NatDSIcon-root-1 NatDSIcon-root-13"
/>
`;

exports[`Icon component when icon size is "medium" should render correctly 1`] = `
<i
  aria-hidden={true}
  className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-add NatDSIcon-root-1 NatDSIcon-root-9"
/>
`;

exports[`Icon component when icon size is "micro" should render correctly 1`] = `
<i
  aria-hidden={true}
  className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-add NatDSIcon-root-1 NatDSIcon-root-5"
/>
`;

exports[`Icon component when icon size is "small" should render correctly 1`] = `
<i
  aria-hidden={true}
  className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-add NatDSIcon-root-1 NatDSIcon-root-7"
/>
`;

exports[`Icon component when icon size is "standard" should render correctly 1`] = `
<i
  aria-hidden={true}
  className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-add NatDSIcon-root-1 NatDSIcon-root-8"
/>
`;

exports[`Icon component when icon size is "tiny" should render correctly 1`] = `
<i
  aria-hidden={true}
  className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-add NatDSIcon-root-1 NatDSIcon-root-6"
/>
`;
